fixed overlapping

--- a/src/style_sheets/Project.css
+++ b/src/style_sheets/Project.css
@@ -11,7 +11,8 @@
    margin-left: 30px;
    margin-right: 10px;
    margin-top: -20px;
-   margin-bottom: 1000px;
+   padding-bottom: 100px;
+   margin-bottom: 100px;
    padding: 20px;
    border-radius: 20px;
    max-height: 700px;
